--- a/webroot/css/back/styles.css
+++ b/webroot/css/back/styles.css
@@ -134,7 +134,7 @@
   justify-content: space-around;
 }
 
-.verhor-center, div.popup_mc#templateOrder > div.popup_container > form > footer, div.block_number div.ico {
+.verhor-center, div.popup_mc#templateOrder > div.popup_container > form > footer, div.container_profil div.card_block > footer.card_footer, div.block_number div.ico {
   display: -webkit-flex;
   display: flex;
   -webkit-flex-flow: row nowrap;
@@ -163,6 +163,10 @@
   direction: ltr;
   -webkit-font-feature-settings: 'liga';
   -webkit-font-smoothing: antialiased;
+}
+
+.fa {
+  font-size: 22px;
 }
 
 .button_default, .select_default {
@@ -817,6 +821,10 @@ div.container div.block > div.pannel.pannel_heading {
   padding-top: 40px;
   padding-bottom: 40px;
 }
+div.container div.block > div.pannel.pannel_legend p {
+  font-size: 20px;
+  text-align: center;
+}
 
 /*----------  Popup  ----------*/
 .popup_mc {
@@ -891,6 +899,64 @@ div.alert p {
   text-align: center;
   line-height: 50px;
   padding: 0 20px;
+}
+
+/*----------  Tableur  ----------*/
+.container_to_table {
+  width: 100%;
+  min-height: 250px;
+}
+.container_to_table table {
+  margin-bottom: 20px;
+  border-collapse: collapse;
+  border-spacing: 0;
+  display: table;
+  width: 100%;
+}
+.container_to_table table > caption {
+  text-align: right;
+  font-size: 20px;
+  padding: 15px 0px;
+  margin: 0 10px 10px 0;
+}
+.container_to_table table > thead, .container_to_table table > tbody {
+  vertical-align: middle;
+}
+.container_to_table table > thead {
+  display: table-header-group;
+}
+.container_to_table table > tbody {
+  display: table-row-group;
+}
+
+.container_to_table > table > thead > tr {
+  display: table-row;
+  vertical-align: inherit;
+}
+.container_to_table > table > thead > tr th {
+  border-bottom: 2px solid #ddd;
+  padding: 8px 12px;
+  line-height: 1.42857143;
+  text-align: left;
+  display: table-cell;
+  font-size: 17px;
+}
+
+.container_to_table > table > tbody > tr {
+  width: 100%;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=90);
+  opacity: 0.9;
+  vertical-align: middle;
+}
+.container_to_table > table > tbody > tr td {
+  padding: 18px 12px;
+  color: #444;
+  border-top: 1px solid #ddd;
+}
+.container_to_table > table > tbody > tr:hover {
+  background: #f5f5f5;
+  filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
+  opacity: 1;
 }
 
 /*----------  Templates  ----------*/
@@ -1180,6 +1246,23 @@ div.container_profil h2 {
   color: #444;
   text-align: center;
 }
+div.container_profil p#mySub {
+  text-align: center;
+  width: 100%;
+}
+div.container_profil p#mySub > span {
+  padding: 8px 13px;
+  border: 2px solid #0676B2;
+  background-color: #fff;
+  color: #0676B2;
+  font-weight: 700;
+  margin: 15px auto;
+  max-width: 200px;
+  display: block;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+}
 div.container_profil button {
   margin: 0;
 }
@@ -1285,6 +1368,10 @@ div.container_profil div.info_accordeon ul.sm_field > li > p {
 }
 div.container_profil div.info_accordeon ul.sm_field > li > p > input {
   border: 0;
+  margin-right: 5px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+  font-style: italic;
+  color: #444;
 }
 div.container_profil div.info_accordeon ul.sm_field > li > p > strong > a {
   text-decoration: none;
@@ -1297,10 +1384,10 @@ div.container_profil div.info_accordeon ul.sm_field > li > p > strong > a {
   -o-transition-property: visibility, opacity;
   -webkit-transition-property: visibility, opacity;
   transition-property: visibility, opacity;
-  -moz-transition-delay: 0.5;
-  -o-transition-delay: 0.5;
-  -webkit-transition-delay: 0.5;
-  transition-delay: 0.5;
+  -moz-transition-delay: 0.2s;
+  -o-transition-delay: 0.2s;
+  -webkit-transition-delay: 0.2s;
+  transition-delay: 0.2s;
   visibility: visible;
   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
@@ -1309,6 +1396,103 @@ div.container_profil div.info_accordeon ul.sm_field > li > p > strong > a.desact
   visibility: hidden;
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
+}
+div.container_profil div.row_cards {
+  -webkit-align-items: flex-start;
+  align-items: flex-start;
+}
+div.container_profil div.card_block {
+  width: 300px;
+  -moz-box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+  -webkit-box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+  margin: 25px 0;
+  position: relative;
+  margin-right: 10px;
+}
+div.container_profil div.card_block > span.subactual {
+  position: absolute;
+  display: block;
+  top: 0;
+  left: 0;
+  padding: 10px;
+  background-color: #8BC34A;
+  border-bottom: 2px solid #fff;
+  border-right: 2px solid #fff;
+  color: #fff;
+  font-size: 13px;
+  font-weight: 600;
+}
+div.container_profil div.card_block > header.card_heading {
+  height: 200px;
+  -moz-border-radius-topleft: 3px;
+  -webkit-border-top-left-radius: 3px;
+  border-top-left-radius: 3px;
+  -moz-border-radius-topright: 3px;
+  -webkit-border-top-right-radius: 3px;
+  border-top-right-radius: 3px;
+  color: #fff;
+}
+div.container_profil div.card_block > header.card_heading > span {
+  text-align: center;
+  display: block;
+  width: 100%;
+}
+div.container_profil div.card_block > header.card_heading > span.card_price {
+  font-size: 60px;
+  font-weight: 600;
+  margin-bottom: 15px;
+}
+div.container_profil div.card_block > header.card_heading > span.card_price > sub {
+  font-size: 20px;
+  font-weight: normal;
+  padding-left: 5px;
+}
+div.container_profil div.card_block > header.card_heading > span.card_name {
+  font-size: 15px;
+  font-weight: 700;
+}
+div.container_profil div.card_block > div.card_body > ul > li {
+  text-align: center;
+  padding: 22px 10px;
+  width: 80%;
+  margin: 0 auto;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  color: #8a8a8a;
+}
+div.container_profil div.card_block > footer.card_footer {
+  width: 100%;
+  padding: 20px 0;
+}
+div.container_profil div.card_block:first-child .card_heading, div.container_profil div.card_block:first-child button {
+  background-color: #0676B2;
+}
+div.container_profil div.card_block:nth-child(2) .card_heading, div.container_profil div.card_block:nth-child(2) button {
+  background-color: #FF3B49;
+}
+div.container_profil div.card_block:nth-child(3) .card_heading, div.container_profil div.card_block:nth-child(3) button {
+  background-color: #FF9E22;
+}
+div.container_profil table.table_fac th {
+  width: 24%;
+}
+div.container_profil table.table_fac th:last-child {
+  width: 4%;
+}
+div.container_profil table.table_fac tbody td:last-child {
+  text-align: center;
+}
+div.container_profil table.table_fac i {
+  cursor: pointer;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  color: #BE0804;
 }
 
 /*----------  Popup Default  ----------*/
@@ -1683,64 +1867,6 @@ div.container_profil div.info_accordeon ul.sm_field > li > p > strong > a.desact
 /*============================================
 =            Commande & User Page            =
 ============================================*/
-.container_to_table {
-  width: 100%;
-  min-height: 250px;
-}
-.container_to_table table {
-  margin-bottom: 20px;
-  border-collapse: collapse;
-  border-spacing: 0;
-  display: table;
-  width: 100%;
-}
-.container_to_table table > caption {
-  text-align: right;
-  font-size: 20px;
-  padding: 15px 0px;
-  margin: 0 10px 10px 0;
-}
-.container_to_table table > thead, .container_to_table table > tbody {
-  vertical-align: middle;
-}
-.container_to_table table > thead {
-  display: table-header-group;
-}
-.container_to_table table > tbody {
-  display: table-row-group;
-}
-
-.container_to_table > table > thead > tr {
-  display: table-row;
-  vertical-align: inherit;
-}
-.container_to_table > table > thead > tr th {
-  padding: 3px 8px;
-  border-bottom: 2px solid #ddd;
-  padding: 8px;
-  line-height: 1.42857143;
-  text-align: left;
-  display: table-cell;
-  font-size: 17px;
-}
-
-.container_to_table > table > tbody > tr {
-  width: 100%;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=90);
-  opacity: 0.9;
-  vertical-align: middle;
-}
-.container_to_table > table > tbody > tr td {
-  padding: 18px 12px;
-  color: #444;
-  border-top: 1px solid #ddd;
-}
-.container_to_table > table > tbody > tr:hover {
-  background: #f5f5f5;
-  filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
-  opacity: 1;
-}
-
 span.label {
   display: inline;
   padding: .2em .6em .3em;
