--- a/webroot/scss/styles.scss
+++ b/webroot/scss/styles.scss
@@ -209,6 +209,8 @@ $shadow3: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
   -webkit-font-smoothing: antialiased;
 }
 
+.fa { font-size: 22px; }
+
 .button_default {
     color: #f0f0f0;
     @include border-radius(3px);
@@ -580,6 +582,8 @@ div.container {
 
         &.pannel_body { padding-top: 30px; padding-bottom: 30px; }
         &.pannel_heading { padding-top: 40px; padding-bottom: 40px; }
+
+        &.pannel_legend p { font-size: 20px; text-align: center; }
     }
 }
 
@@ -632,6 +636,60 @@ div.alert {
     @include border-radius(3px);
 
     p { text-align: center; line-height: 50px; padding: 0 20px;}
+}
+
+/*----------  Tableur  ----------*/
+
+.container_to_table {
+    width: 100%;
+    min-height: 250px;
+
+    table {
+        margin-bottom: 20px;
+        border-collapse: collapse;
+        border-spacing: 0;
+        display: table;
+        width: 100%;
+        
+        & > caption {
+            text-align: right;
+            font-size: 20px;
+            padding: 15px 0px;
+            margin: 0 10px 10px 0;
+        }
+        & > thead, & > tbody { vertical-align: middle; }
+        & > thead { display: table-header-group; }
+        & > tbody { display: table-row-group; }
+    }
+}
+
+
+.container_to_table > table > thead > tr {
+    display: table-row;
+    vertical-align: inherit;
+
+    th {
+        border-bottom: 2px solid #ddd;
+        padding: 8px 12px;
+        line-height: 1.42857143;
+        text-align: left;
+        display: table-cell;
+        font-size: 17px;
+    }
+}
+
+.container_to_table > table > tbody > tr {
+    width: 100%;
+    @include opacity(0.9);
+    vertical-align: middle;
+
+    td {
+        padding: 18px 12px;
+        color: #444;
+        border-top: 1px solid #ddd;
+    }
+
+    &:hover { background: #f5f5f5; @include opacity(1); }
 }
 
 /*----------  Templates  ----------*/
@@ -825,6 +883,21 @@ div.container_profil { overflow-y: scroll!important;
     div.block > .pannel_title + div.pannel_body { padding-top: 0!important; padding-bottom: 0!important; }
 
     h2 { color: $primaryTextColor; text-align: center; }
+    p#mySub { 
+        text-align: center; 
+        width: 100%;
+        & > span {
+            padding: 8px 13px;
+            border: 2px solid $primaryColor;
+            background-color: #fff;
+            color: $primaryColor;
+            font-weight: 700;
+            margin: 15px auto;
+            max-width: 200px;
+            display: block;
+            @include border-radius(3px);
+        }
+    }
 
     button { margin: 0; }
 
@@ -896,7 +969,10 @@ div.container_profil { overflow-y: scroll!important;
             & > p { padding: 0 5px; }
             & > p > input {
                 border: 0;
-
+                margin-right: 5px;
+                border-bottom: 1px solid rgbaExpress(black, 0.05);
+                font-style: italic;
+                color: $primaryTextColor;
             }
             & > p > strong > a { 
                 text-decoration: none;
@@ -907,6 +983,77 @@ div.container_profil { overflow-y: scroll!important;
             }
         }
     }
+
+    div.row_cards { @include align-items(flex-start); }
+
+    div.card_block {
+        width: 300px;
+        @include box-shadow($shadow3);
+        @include border-radius(3px);
+        margin: 25px 0;
+        position: relative;
+        margin-right: 10px;
+
+        & > span.subactual {
+            position: absolute;
+            display: block;
+            top: 0; left: 0;
+            padding: 10px;
+            background-color: #8BC34A;
+            border-bottom: 2px solid #fff;
+            border-right: 2px solid #fff;
+            color: #fff;
+            font-size: 13px;
+            font-weight: 600;
+        }
+        
+        & > header.card_heading {
+            height: 200px;
+            @include border-top-radius(3px);
+            color: #fff;
+
+            & > span {
+                text-align: center;
+                display: block;
+                width: 100%;
+
+                &.card_price { 
+                    font-size: 60px; 
+                    font-weight: 600; 
+                    margin-bottom: 15px; 
+
+                    & > sub { font-size: 20px; font-weight: normal; padding-left: 5px; }
+                }
+               
+                &.card_name { font-size: 15px; font-weight: 700; }
+            }
+        }
+
+        & > div.card_body {
+            & > ul > li {
+                text-align: center;
+                padding: 22px 10px;
+                width: 80%;
+                margin: 0 auto;
+                border-bottom: $primaryBorder; 
+                color: rgb(138, 138, 138);
+            }
+        }
+
+        & > footer.card_footer {
+            width: 100%;
+            padding: 20px 0;
+            @extend .verhor-center;
+        }
+
+        &:first-child { .card_heading, button { background-color: $primaryColor; } }
+        &:nth-child(2) { .card_heading, button { background-color: $secondaryColor; } }
+        &:nth-child(3) { .card_heading, button { background-color: $additionalColor; } }
+    }
+
+    table.table_fac th { width: 24%; &:last-child { width: 4%; } }
+    table.table_fac tbody td:last-child { text-align: center; }
+    table.table_fac i { cursor: pointer; @include noselect(); color: #BE0804; }
 }
 
 /*----------  Popup Default  ----------*/
@@ -1177,60 +1324,6 @@ $loader-size_bis: 24px;
 /*============================================
 =            Commande & User Page            =
 ============================================*/
-
-// Admin table
-.container_to_table {
-    width: 100%;
-    min-height: 250px;
-
-    table {
-        margin-bottom: 20px;
-        border-collapse: collapse;
-        border-spacing: 0;
-        display: table;
-        width: 100%;
-        
-        & > caption {
-            text-align: right;
-            font-size: 20px;
-            padding: 15px 0px;
-            margin: 0 10px 10px 0;
-        }
-        & > thead, & > tbody { vertical-align: middle; }
-        & > thead { display: table-header-group; }
-        & > tbody { display: table-row-group; }
-    }
-}
-
-
-.container_to_table > table > thead > tr {
-    display: table-row;
-    vertical-align: inherit;
-
-    th {
-        padding: 3px 8px;
-        border-bottom: 2px solid #ddd;
-        padding: 8px;
-        line-height: 1.42857143;
-        text-align: left;
-        display: table-cell;
-        font-size: 17px;
-    }
-}
-
-.container_to_table > table > tbody > tr {
-    width: 100%;
-    @include opacity(0.9);
-    vertical-align: middle;
-
-    td {
-        padding: 18px 12px;
-        color: #444;
-        border-top: 1px solid #ddd;
-    }
-
-    &:hover { background: #f5f5f5; @include opacity(1); }
-}
 
 span.label {
     display: inline;
