--- a/webroot/scss/styles.scss
+++ b/webroot/scss/styles.scss
@@ -692,11 +692,11 @@ div.alert {
     &:hover { background: #f5f5f5; @include opacity(1); }
 }
 
-/*----------  Templates  ----------*/
+/*----------  Popup  ----------*/
 
-div.popup_mc#templatePreview > div.popup_container { width: auto; }
+div.popup_mc#templateOrder > div.popup_container { width: 80%; }
 
-div.popup_mc#templateOrder > div.popup_container {
+div.popup_mc > div.popup_container {
     & > header,
     & > form { width: 100%; }
 
@@ -730,6 +730,8 @@ div.popup_mc#templateOrder > div.popup_container {
                 text-align: left;
 
                 label, p { width: 100%; }
+
+                &.overside p { text-align: center; }
 
                 &.oneside p, &.oneside label { margin:0; }
             }
@@ -765,6 +767,8 @@ div.popup_mc#templateOrder > div.popup_container {
         & > footer { @extend .verhor-center; }
     }
 }
+
+/*----------  Templates  ----------*/
 
 div.list_template {
     padding-top: 0!important;
@@ -836,6 +840,8 @@ div.list_template {
 
 div.container_profil { overflow-y: scroll!important;
 
+    div.popup_mc#profilRenewal footer { height: 120px; }
+
     div.settings_menu {
         position: relative;
         padding-top: 0!important;
@@ -883,25 +889,31 @@ div.container_profil { overflow-y: scroll!important;
     div.block > .pannel_title + div.pannel_body { padding-top: 0!important; padding-bottom: 0!important; }
 
     h2 { color: $primaryTextColor; text-align: center; }
-    p#mySub { 
+    p.legend { 
         text-align: center; 
         width: 100%;
-        & > span {
+        & > button {
             padding: 8px 13px;
             border: 2px solid $primaryColor;
             background-color: #fff;
             color: $primaryColor;
             font-weight: 700;
             margin: 15px auto;
-            max-width: 200px;
+            font-size: 16px;
             display: block;
+            cursor: pointer;
             @include border-radius(3px);
+            @include single-transition(none, 0.3s, ease, 0s);
+            @include transition-property(color, background-color);
+
+            &:hover {
+                background-color: $primaryColor;
+                color: #fff;
+            }
         }
     }
 
-    button { margin: 0; }
-
-    div.field {
+    div.bg_field {
         padding: 10px 15px;
         width: 100%;
         @include box-sizing(border-box);
@@ -1002,7 +1014,7 @@ div.container_profil { overflow-y: scroll!important;
             background-color: #8BC34A;
             border-bottom: 2px solid #fff;
             border-right: 2px solid #fff;
-            color: #fff;
+            color: rgbaExpress(white, 0.85);
             font-size: 13px;
             font-weight: 600;
         }
@@ -1054,6 +1066,39 @@ div.container_profil { overflow-y: scroll!important;
     table.table_fac th { width: 24%; &:last-child { width: 4%; } }
     table.table_fac tbody td:last-child { text-align: center; }
     table.table_fac i { cursor: pointer; @include noselect(); color: #BE0804; }
+
+    .checkbonito{ display: none; }
+    .checkbonito ~ label{
+        display: inline-block;
+        max-width: 30px;
+        background-color: #f0f0f0;
+        padding: 10px 25px;
+        @include border-radius(50px);
+        cursor: pointer;
+        @include single-transition(all, 200ms, ease-in-out, 0s);
+        margin: 5px;
+        @include noselect();
+    }
+    .checkbonito:checked ~ label{
+        background-color: adjust-lightness($primaryColor, 12);
+    }
+    .checkbonito ~ label::before{
+        content: "";
+        background-color: white;
+        padding: 13px;
+        position: absolute;
+        cursor: pointer;
+        display: block;
+        @include translate(-30px, -13px);
+        @include border-radius(50px);
+        @include single-transition(all, 200ms, ease-in-out, 0s);
+        @include box-shadow(1px 1px 5px .5px rgbaExpress(black, 0.5));
+    }
+    .checkbonito:checked ~ label::before{
+      @include translate(5px, -13px);
+      background-color: $primaryColor;
+    }
+
 }
 
 /*----------  Popup Default  ----------*/
