--- a/webroot/css/back/styles.css
+++ b/webroot/css/back/styles.css
@@ -1061,6 +1061,130 @@ div.popup_mc > div.popup_container > form textarea::-webkit-scrollbar-thumb {
 }
 
 /*----------  Dashboard  ----------*/
+div.container_template .sm_square {
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  width: 300px;
+  height: 120px;
+  margin: 0 auto;
+  position: relative;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+  -moz-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+}
+div.container_template .sm_square div.square_body {
+  height: 80px;
+  width: 100%;
+  padding: 15px;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  background-color: #0676B2;
+}
+div.container_template .sm_square div.square_body > div.square_ico {
+  width: 50%;
+  height: 100%;
+}
+div.container_template .sm_square div.square_body > div.square_ico i {
+  font-size: 40px;
+  color: #fff;
+}
+div.container_template .sm_square div.square_body > div.square_name {
+  -webkit-align-items: flex-end;
+  align-items: flex-end;
+  color: #fff;
+}
+div.container_template .sm_square div.square_body > div.square_name span {
+  display: block;
+  font-size: 26px;
+  font-weight: 600;
+  color: inherit;
+  text-transform: uppercase;
+}
+div.container_template .sm_square div.square_body > div.square_name p {
+  text-align: right;
+  font-size: 15px;
+  color: inherit;
+}
+div.container_template .sm_square footer.square_footer {
+  height: 40px;
+  padding: 15px;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  background-color: #fff;
+  color: #0676B2;
+  cursor: pointer;
+}
+div.container_template .sm_square footer.square_footer > p {
+  font-weight: 500;
+}
+div.container_template .sm_square footer.square_footer:hover > i {
+  -moz-animation: movingOnLine 1s ease-in-out 0s infinite;
+  -webkit-animation: movingOnLine 1s ease-in-out 0s infinite;
+  animation: movingOnLine 1s ease-in-out 0s infinite;
+}
+@-moz-keyframes movingOnLine {
+  0%, 100% {
+    -moz-transform: translateX(0px);
+    transform: translateX(0px);
+    color: inherit;
+  }
+  50% {
+    -moz-transform: translateX(5px);
+    transform: translateX(5px);
+    color: #fff;
+  }
+}
+@-webkit-keyframes movingOnLine {
+  0%, 100% {
+    -webkit-transform: translateX(0px);
+    transform: translateX(0px);
+    color: inherit;
+  }
+  50% {
+    -webkit-transform: translateX(5px);
+    transform: translateX(5px);
+    color: #fff;
+  }
+}
+@keyframes movingOnLine {
+  0%, 100% {
+    -moz-transform: translateX(0px);
+    -ms-transform: translateX(0px);
+    -webkit-transform: translateX(0px);
+    transform: translateX(0px);
+    color: inherit;
+  }
+  50% {
+    -moz-transform: translateX(5px);
+    -ms-transform: translateX(5px);
+    -webkit-transform: translateX(5px);
+    transform: translateX(5px);
+    color: #fff;
+  }
+}
+div.container_template .sm_square:first-child div.square_body {
+  background-color: #0676B2;
+}
+div.container_template .sm_square:first-child footer.square_footer {
+  color: #0676B2;
+}
+div.container_template .sm_square:nth-child(2) div.square_body {
+  background-color: #FF3B49;
+}
+div.container_template .sm_square:nth-child(2) footer.square_footer {
+  color: #FF3B49;
+}
+div.container_template .sm_square:nth-child(3) div.square_body {
+  background-color: #FF9E22;
+}
+div.container_template .sm_square:nth-child(3) footer.square_footer {
+  color: #FF9E22;
+}
+
 /*----------  Templates  ----------*/
 div.list_template {
   padding-top: 0 !important;
